# pvptimize

./: .gitignore  Cargo.toml  README.md  download_gamemaster.py
docs/: battle.puml  fastmove.puml  pvp.md
src/: error.rs  gamemaster.rs  lib.rs  main.rs  main_old.rs  model.rs  ranker.rs
src/model/: battle.rs  mechanics.rs  mod.rs  moves.rs  pokemon.rs
