[package]
name = "pvptimize"
version = "0.1.0"
authors = ["Andrea Venuta <venutawebdesign@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.44"
serde = { version = "1.0.103", features = ["derive"] }