[package]
name = "pvptimize"
version = "0.1.0"
authors = ["Andrea Venuta <venutawebdesign@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.53"
serde = { version = "1.0.110", features = ["derive"] }
lazy_static = "1.4.0"
dotenv = "0.15.0"
